istio-config/https-ingress/clust2-helloworld-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld-gateway-tls
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  # https://github.com/istio/istio/issues/45173
  - port:
      number: 15443
      name: https
      protocol: HTTPS
    tls:
      #mode: ISTIO_MUTUAL #!! works but needs "curl -HHost:helloworld.sample.com" and a VS on ingress...
      mode: AUTO_PASSTHROUGH #!!!!!!! OMG!!! works too with no need for VS and just simple curl! Remote is using ISTIO_MUTUAL on DestinationRule.
    hosts:
    - "*" # OMG this is supper important for it to work.
#    - "helloworld.sample.com"
#https://stackoverflow.com/questions/63000327/istio-ingress-gateway-logs
#https://istio.io/latest/docs/ops/common-problems/network-issues/
#https://istio.io/latest/docs/ops/common-problems/network-issues/#configuring-sni-routing-when-not-sending-sni
#https://istio.io/latest/docs/tasks/traffic-management/ingress/secure-ingress/
#---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: helloworld-vs-tls
#   namespace: sample
# spec:
#   hosts:
#   - "helloworld.sample.com"
#   gateways:
#   - istio-system/helloworld-gateway-tls
#   http:
#   - match:
#     - uri:
#         prefix: /hello
#     route:
#     - destination:
#         port:
#           number: 5000
#         host: helloworld
#https://github.com/istio/istio/issues/50403
#https://github.com/istio/istio/issues/45173
#https://github.com/istio/istio/pull/45202
